[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2018"
authors = ["Johann Lilly 李光 يوهان ليل Джон Лилли <johannlilly@users.noreply.github.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/johannlilly/webassembly-rust/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
